エディターレイアウト作成

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -280,6 +280,27 @@ Pos=809,36
 Size=32,144
 Collapsed=1
 
+[Window][Inspector/LeftPane_AFE08E1B]
+IsChild=1
+Size=305,675
+
+[Window][Inspector/RightPane_9575A1A2/GroupList_E4A56211]
+IsChild=1
+Size=426,659
+
+[Window][Inspector/##LeftColumn_ADCE94E7/SystemAdd_E0A112F5]
+IsChild=1
+Size=280,128
+
+[Window][Inspector/##LeftColumn_ADCE94E7/GroupAdd_9AF54FE8]
+IsChild=1
+Size=280,160
+
+[Window][Edit ParticleManager]
+Pos=60,60
+Size=732,212
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
