レイアウト大体作成できました

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -34,13 +34,13 @@ DockId=0x11111111,2
 
 [Window][Hierarchy]
 Pos=857,0
-Size=251,787
+Size=251,784
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Inspector]
 Pos=1110,0
-Size=810,787
+Size=810,784
 Collapsed=0
 DockId=0x00000018,0
 
@@ -113,8 +113,8 @@ Size=270,283
 Collapsed=0
 
 [Window][Console]
-Pos=857,789
-Size=337,272
+Pos=857,786
+Size=337,275
 Collapsed=0
 DockId=0x00000010,0
 
@@ -224,8 +224,8 @@ Size=471,166
 Collapsed=0
 
 [Window][Asset]
-Pos=1196,789
-Size=724,272
+Pos=1196,786
+Size=724,275
 Collapsed=0
 DockId=0x00000011,0
 
@@ -290,15 +290,25 @@ Size=426,659
 
 [Window][Inspector/##LeftColumn_ADCE94E7/SystemAdd_E0A112F5]
 IsChild=1
-Size=280,128
+Size=280,120
 
 [Window][Inspector/##LeftColumn_ADCE94E7/GroupAdd_9AF54FE8]
 IsChild=1
-Size=280,160
+Size=280,120
 
 [Window][Edit ParticleManager]
 Pos=60,60
 Size=732,212
+Collapsed=0
+
+[Window][ParticleManager EditLayout]
+Pos=66,176
+Size=635,166
+Collapsed=0
+
+[Window][ParticleSystem]
+Pos=60,60
+Size=634,177
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
@@ -388,10 +398,10 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1061 Spl
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X Selected=0xF0D94A78
         DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=855,490 Selected=0xD1EB2482
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=1063,490 Split=Y Selected=0x36DC96AB
-          DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,806 Split=X Selected=0x36DC96AB
+          DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,803 Split=X Selected=0x36DC96AB
             DockNode  ID=0x00000017 Parent=0x0000000E SizeRef=251,769 Selected=0xBABDAE5E
             DockNode  ID=0x00000018 Parent=0x0000000E SizeRef=810,769 CentralNode=1 Selected=0x36DC96AB
-          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,272 Split=X Selected=0xF0D94A78
+          DockNode    ID=0x0000000F Parent=0x0000000B SizeRef=1064,275 Split=X Selected=0xF0D94A78
             DockNode  ID=0x00000010 Parent=0x0000000F SizeRef=337,307 Selected=0xEA83D666
             DockNode  ID=0x00000011 Parent=0x0000000F SizeRef=724,307 Selected=0xF0D94A78
     DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
