--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -311,6 +311,14 @@ Pos=808,72
 Size=32,177
 Collapsed=1
 
+[Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/UpdatersSelect_829DD43B]
+IsChild=1
+Size=141,217
+
+[Window][Inspector/##RightColumn_4F531AB5/GroupParam_0A394CD5/UpdatersEdit_EDED895B]
+IsChild=1
+Size=409,217
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
